src/transaction/SimulationResults.scss
@import '../common/colors';

#simulation-results {
  width: 75vw;
  min-width: 500px;
  
  margin: auto;
  padding: 10px;
  
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  
  text-align: center;
  
  .fa-icon {
    color: $icon-color;
  }
  
  .link {
    color: $text-color;
    text-decoration: none;
  }
  
  #top-box{   
    #transaction-details {
      width: 100%;
      width: 65vw;
      
      display: flex;
      flex-direction: row;
      justify-content: space-around;
      align-items: center;
      
      #gas-fee {
        width: 33%;
        
        margin: 5px;
        padding: 5px;
        
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
        align-items: center;
      }
      
      #amount {
        width: 33%;
        
        margin: 5px;
        padding: 5px;
        
        display: flex;
        flex-direction: horizontal;
        justify-content: space-evenly;
        align-items: center;
      }
      
      #max-tx-fee {
        width: 33%;
        
        margin: 5px;
        padding: 5px;
        
        display: flex;
        flex-direction: row;
        justify-content: space-evenly;
        align-items: center;
      }
    }
  }
  
  #simulation-text{
    color: green;
  }
  
  #checklist{   
    width: 100%;
    
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    color:black;
    
    #item{
      width: 30%;
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
    }
  }
   
  #bottom-buttons{
    width: 100%;
    
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    
    button {
      margin: 10px;
    }
    
    .reject-transaction{
      background-color: lightgray;
      color: black;
    }
    
    .edit-transaction{
      background-color: lightskyblue;
      color: black;
    }
    
    .send-transaction{
      color: white;
      background-color: rgb(12, 100, 12);
    }
  }
}

